--- a/modelling/python/3Dmodelling/circularMembranModelling.ipynb
+++ b/modelling/python/3Dmodelling/circularMembranModelling.ipynb
@@ -90,7 +90,19 @@
    "execution_count": null,
    "id": "bb584582",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 48>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     67\u001b[0m u1 \u001b[38;5;241m=\u001b[39m u\n\u001b[1;32m     69\u001b[0m \u001b[38;5;66;03m#u = next, u1 = curr, u2 = prev\u001b[39;00m\n\u001b[0;32m---> 72\u001b[0m audio[t] \u001b[38;5;241m=\u001b[39m u[nx\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m,ny\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m]\n\u001b[1;32m     73\u001b[0m t_i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
     "# Parameters\n",
     "\n",
